# spec-sentinel

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml  spec-sentinel.yml
.github/workflows/: spec-sentinel.yml
docs/: contracts.md  github-action.md  implementation-plan.md  product-requirements.md
examples/drifted-shop/: README.md  openapi.yaml  pyproject.toml  spec-sentinel.yml
examples/drifted-shop/app/: __init__.py  inventory.py  main.py  models.py  settings.py  webhooks.py
examples/drifted-shop/tests/: test_api.py  test_retry_intent.py
src/spec_sentinel/: __init__.py  __main__.py  agentic.py  cache.py  cli.py  config.py  delta.py  direction.py  discovery.py  extractor.py  models.py  openapi.py  patches.py  pipeline.py  security.py
tests/: test_action_metadata.py  test_agentic.py  test_cache.py  test_delta.py  test_direction_and_patches.py  test_extractor.py  test_models.py  test_openapi.py  test_pipeline_cache.py  test_security.py
