[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "spec-sentinel"
version = "0.1.0"
description = "Evidence-grounded documentation drift detection"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jide Adeluwoye" }]
dependencies = [
  "jsonschema>=4.23,<5",
  "openai>=1.59,<3",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.1,<2",
  "pyyaml>=6.0,<7",
  "rich>=13.9,<15",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
spec-sentinel = "spec_sentinel.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/spec_sentinel"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
